# auto-dev-orchestrator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md
examples/: config.example.toml
src/auto_dev/: cli.py  config.py  models.py  plan_review.py  prompt_builder.py  reasoning.py  risk.py
src/auto_dev/providers/: base.py  codex.py
src/auto_dev/repo/: git_guard.py  inspect.py
src/auto_dev/runtime/: command_runner.py  run_store.py
tests/: test_cli.py  test_codex_provider.py  test_config.py  test_plan_review.py  test_project_detection.py  test_reasoning.py  test_risk.py
