[project]
name = "auto-dev"
version = "0.1.0"
description = "Local supervisor-worker automation for coding agents."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
auto-dev = "auto_dev.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

